01_registry_whitelisting/.kyverno-test/resource.yaml
# Bad deployment - uses public image registry
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
  labels:
    app: busybox
  namespace: demo-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.28
        name: busybox
        command: ["sleep", "9999"]
---
# Good deployment - uses whitelisted private image registry
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
  labels:
    app: busybox
  namespace: demo-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: 123456789012.dkr.ecr.ap-southeast-1.amazonaws.com/busybox:1.28
        name: busybox
        command: ["sleep", "9999"]
