01_registry_whitelisting/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: 01-registry-whitelisting
policies:
- ../01_registry_whitelisting.yaml
resources:
- resource.yaml
results:
- kind: Deployment
  policy: restrict-image-registries
  resources:
  - baddeployment01
  result: fail
  rule: validate-registries
- kind: Deployment
  policy: restrict-image-registries
  resources:
  - gooddeployment01
  result: pass
  rule: validate-registries
